# ares-bwapi-bot

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Core.h  README.md  config.h.in  vcpkg.json
cmake/: FindBWAPI.cmake
cmake/Modules/: AresConfigure.cmake  EnableCXX11.cmake  FindBWAPI.cmake
core/: AbstractCommander.h  AbstractDispatcher.h  AbstractGameEventListener.h  AbstractWorkerEventListener.h  CMakeLists.txt  Commander.h  Core.cpp  GameEventListener.h  ResourcesHarvester.cpp  ResourcesHarvester.h  TETDeclaration.h  WorkerEventListener.h  WorkerManager.cpp  WorkerManager.h  config.h.in
core/abc/: Commander.h  Dispatcher.h  GameEventListener.h  WorkerEventListener.h
core/log/: BufferStream.cpp  BufferStream.h  CMakeLists.txt  Facade.cpp  Facade.h  Layout.cpp  Layout.h  Log.h  LogContext.h  Logger.cpp  Logger.h  Utils.h
core/test/: CMakeLists.txt  MockCommander.h  MockDispatcher.h  ResourcesHarvesterTest.cpp  TestCore.cpp  TestMain.cpp  WorkerManagerTest.cpp
core/trace/: BufferStream.cpp  BufferStream.h  CMakeLists.txt  Facade.cpp  Facade.h  Layout.cpp  Layout.h  LogContext.h  Logger.cpp  Logger.h  Trace.cpp  Trace.h  Utils.cpp
core/trace/test/: CMakeLists.txt  TestMain.cpp
corelib/: AbstractEventDispatcher.h  AbstractEventListener.h  CMakeLists.txt  Core.cpp  Core.h  MessageLogger.cpp  MessageLogger.h  TETDeclaration.h
corelib/test/: CMakeLists.txt
module/: AresAIModule.cpp  AresAIModule.h  BroodwarLogger.cpp  BroodwarLogger.h  CMakeLists.txt  Commander.cpp  Commander.h  Module.cpp  Module.h  dll.cpp
test/: CMakeLists.txt  TestCore.cpp  TestMain.cpp
tests/: CMakeLists.txt
tests/core/: CMakeLists.txt  ResourcesHarvesterTest.cpp  TestMain.cpp
tests/core/log/: CMakeLists.txt  TestMain.cpp
tests/core/trace/: TestMain.cpp
traceslib/: CompositeStream.h  MessageLogger.cpp  traces.cpp  traces.h
